--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,8 @@ body {
     width: 300px;
     background-color: darkgray;
     display:flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     padding-top: 10px;
 }
 
@@ -23,4 +24,10 @@ body {
 
 #display-text {
     color: lightgray;
+}
+
+#operators {
+    background-color: bisque;
+    display: flex;
+    flex-direction: column;
 }
