--- a/assets/style.css
+++ b/assets/style.css
@@ -10,14 +10,17 @@ body {
     display:flex;
     align-items: center;
     flex-direction: column;
-    padding-top: 40px;
-    gap: 50px;
+    padding-top: 30px;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    
+    gap: 20px;
     
 }
 
 #display {
     width: 250px;
-    height: 70px;
+    height: 100px;
     background-color: darkslategrey;
     display:flex;
     justify-content: flex-start;
@@ -26,6 +29,7 @@ body {
 
 #display-text {
     color: lightgray;
+    font-size: 50px;
 }
 
 #operators {
@@ -33,6 +37,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    
 }
 
 #operators-digits {
@@ -53,6 +58,12 @@ body {
 .button {
     height: 50px;
     width: 50px;
+    font-size: 37px;
+    text-align: center;
+    padding: 0px;
+    background-color: darkgray;
+    border-style: none;
+    
 }
 
 .digits {
