--- a/assets/style.css
+++ b/assets/style.css
@@ -1,35 +1,41 @@
 body {
+    max-height: 100vh;
     display: flex;
     justify-content: center;
+    margin: 0%;
 }
 
 #main-container {
-    height: 440px;
-    width: 300px;
+
+    height: 700px;
+    width: 400px;
     background-color: darkgray;
     display:flex;
     align-items: center;
     flex-direction: column;
-    padding-top: 30px;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
     
-    gap: 20px;
+    padding-top: 40px;
+    
     
 }
 
 #display {
-    width: 250px;
-    height: 200px;
+    width: 350px;
+    height: 120px;
     background-color: darkslategrey;
     display:flex;
     justify-content: flex-start;
     align-items: center;
+
+    margin-bottom: 50px;
 }
 
 #display-text {
-    color: lightgray;
-    font-size: 50px;
+    color: rgb(16, 28, 28);
+    font-family: "DotGothic16", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 80px;
     margin: 0%;
 }
 
@@ -37,14 +43,20 @@ body {
     
     display: flex;
     flex-direction: column;
-    gap: 1px;
+    gap: 25px;
+    
+    
     
 }
 
 #operators-digits {
     display: flex;
-    gap: 10px;
-    align-items: center;
+    gap: 30px;
+    
+    flex: auto;
+    justify-content: space-between;
+
+
     
     
 }
@@ -52,14 +64,16 @@ body {
 #digit-container {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 50px;
+    flex: auto;
+    margin-left: 20px;
 
 }
 
 .button {
-    height: 50px;
-    width: 50px;
-    font-size: 37px;
+    height: 60px;
+    width: 60px;
+    font-size: 50px;
     text-align: center;
     padding: 0px;
     background-color: darkgray;
@@ -69,5 +83,8 @@ body {
 
 .digits {
     display: flex;
-    gap: 20px;
+    gap: 40px;
+}
+.button:active {
+    box-shadow: 10px 10px 15px rgb(176, 176, 176);
 }
