--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,12 @@
+html {
+    height: 100%;
+}
 body {
-    max-height: 100vh;
+    
+    height: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
     margin: 0%;
 }
 
