--- a/assets/style.css
+++ b/assets/style.css
@@ -12,12 +12,13 @@ body {
 
 #main-container {
 
-    height: 700px;
-    width: 400px;
+    height: 100vh;
+    width: 100vw;
     background-color: darkgray;
     display:flex;
     align-items: center;
     flex-direction: column;
+    flex: auto;
     
     padding-top: 40px;
     
