--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,20 @@
+    @font-face {
+    font-family: 'Digital-7';
+    src: url('fonts/Digital7Mono-Yz9J4.eot');
+    src: url('fonts/Digital7Mono-Yz9J4.eot?#iefix') format('embedded-opentype'),
+         url('fonts/Digital7Mono-Yz9J4.woff2') format('woff2'),
+         url('fonts/Digital7Mono-Yz9J4.woff') format('woff'),
+         url('fonts/Digital7Mono-Yz9J4.ttf')  format('truetype'),
+         url('fonts/Digital7Mono-Yz9J4.svg#Digital-7') format('svg');
+}@font-face {
+    font-family: 'Digital-7';
+    src: url('/assets/fonts/Digital7Mono-Yz9J4.eot');
+    src: url('/assets/fonts/Digital7Mono-Yz9J4.eot') format('embedded-opentype'),
+         url('/assets/fonts/Digital7Mono-Yz9J4.woff2') format('woff2'),
+         url('/assets/fonts/Digital7Mono-Yz9J4.woff') format('woff'),
+         url('/assets/fonts/Digital7Mono-Yz9J4.ttf')  format('truetype'),
+         url('/assets/fonts/Digital7Mono-Yz9J4.svg') format('svg');
+}
 html {
     height: 100%;
 }
@@ -33,12 +50,13 @@ body {
     justify-content: flex-start;
     align-items: center;
 
+    
     margin-bottom: 40px;
 }
 
 #display-text {
     color: rgb(16, 28, 28);
-    font-family: "DotGothic16", sans-serif;
+    font-family: 'Digital-7';
     font-weight: 400;
     font-style: normal;
     font-size: 80px;
