--- a/assets/style.css
+++ b/assets/style.css
@@ -45,22 +45,38 @@ body {
 #display {
     width: 350px;
     height: 120px;
-    background-color: darkslategrey;
+    background-color: rgb(59, 59, 59);
     display:flex;
     justify-content: flex-start;
     align-items: center;
+
+    gap: 4px;
 
     
     margin-bottom: 40px;
 }
 
-#display-text {
-    color: rgb(16, 28, 28);
+#back-layer-text {
+    color: rgba(16, 28, 28, 0.335);
     font-family: 'Digital-7';
     font-weight: 400;
     font-style: normal;
     font-size: 90px;
     margin: 0%;
+}
+
+#display-text {
+    position: absolute;
+    height: 90px;
+    color: rgb(53, 207, 207);
+    filter: drop-shadow(0 0 0.75rem rgba(53, 207, 207, 0.475));
+                
+    font-family: 'Digital-7';
+    font-weight: 400;
+    font-style: normal;
+    font-size: 90px;
+    margin: 0%;
+    padding: 0%;
 }
 
 #operators {
@@ -112,4 +128,20 @@ body {
 }
 .button:active {
     box-shadow: 10px 10px 15px rgb(176, 176, 176);
+}
+
+#screen-operators {
+
+    color: rgba(16, 28, 28, 0.335);
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+    
+
+}
+.screen-operators-group {
+    text-align: center;
+    font-size: 20px;
+    height: 16px;
+
 }
