--- a/assets/style.css
+++ b/assets/style.css
@@ -25,35 +25,46 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0%;
+    padding: 0;
+}
+
+#header {
+    font-family: 'Digital-7';
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20px;
 }
 
 #main-container {
 
     height: 100vh;
     width: 100vw;
-    background-color: darkgray;
+    background-color: rgb(53, 53, 53);
     display:flex;
     align-items: center;
+    justify-items: center;
     flex-direction: column;
-    flex: auto;
+    flex-shrink:inherit;
     
-    padding-top: 40px;
+    
     
     
 }
 
 #display {
-    width: 350px;
+    width: 300px;
     height: 120px;
-    background-color: rgb(59, 59, 59);
+    background-color: rgb(0, 0, 0);
     display:flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
+    padding-left: 10px;
+    flex-shrink: inherit;
 
     gap: 4px;
-
+    box-shadow: 4px 8px 6px -2px #1f1f1f;
     
-    margin-bottom: 40px;
+    
 }
 
 #back-layer-text {
@@ -61,20 +72,20 @@ body {
     font-family: 'Digital-7';
     font-weight: 400;
     font-style: normal;
-    font-size: 90px;
+    font-size: 60px;
     margin: 0%;
 }
 
 #display-text {
     position: absolute;
-    height: 90px;
+    height: 60px;
     color: rgb(53, 207, 207);
     filter: drop-shadow(0 0 0.75rem rgba(53, 207, 207, 0.475));
                 
     font-family: 'Digital-7';
     font-weight: 400;
     font-style: normal;
-    font-size: 90px;
+    font-size: 60px;
     margin: 0%;
     padding: 0%;
 }
@@ -83,7 +94,8 @@ body {
     
     display: flex;
     flex-direction: column;
-    gap: 25px;
+    gap: 50px;
+    margin-top: 140px;
     
     
     
@@ -91,10 +103,10 @@ body {
 
 #operators-digits {
     display: flex;
-    gap: 30px;
+    gap: 20px;
+    flex: 1;
     
-    flex: auto;
-    justify-content: space-between;
+    
 
 
     
@@ -105,44 +117,289 @@ body {
     display: flex;
     flex-direction: column;
     margin-top: 30px;
-    gap: 50px;
-    flex: auto;
-    margin-left: 20px;
+    gap: 10px;
+    
+    justify-content: space-evenly;
+    
 
 }
 
 .button {
-    height: 60px;
-    width: 60px;
-    font-size: 50px;
-    text-align: center;
-    padding: 0px;
-    background-color: darkgray;
-    border-style: none;
+    display: flex;
+    position: relative;
+    border: none;
+    background: transparent;
+    padding: 0;
+    cursor: pointer;
+    outline-offset: 4px;
+    transition: filter 250ms;
+    flex-grow: 1;
+    
+}
+.button2 {
+    display: flex;
+    position: relative;
+    border: none;
+    background: transparent;
+    padding: 0;
+    cursor: pointer;
+    outline-offset: 4px;
+    transition: filter 250ms;
     
 }
 
 .digits {
     display: flex;
-    gap: 40px;
+    gap: 10px;
+    justify-content: space-between;
+    
+    
+    
 }
-.button:active {
-    box-shadow: 10px 10px 15px rgb(176, 176, 176);
-}
+
 
 #screen-operators {
 
     color: rgba(16, 28, 28, 0.335);
     display: flex;
     flex-direction: column;
-    gap: 0px;
+        gap: 12px;
+    
+    margin-bottom: 20px;
+    margin-left: 20px;
+    
+
+}
+
+#screen-operators2 {
+
+    color: rgba(16, 28, 28, 0.335);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 12px;
+    margin-right: 20px;
+    margin-bottom: 20px;
     
 
 }
 .screen-operators-group {
     text-align: center;
-    font-size: 20px;
+    font-size: 30px;
     font-weight: 900;
     height: 16px;
+    margin-right: 10px;
 
 }
+
+  .shadow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    background: hsl(0deg 0% 0% / 0.25);
+    will-change: transform;
+    transform: translateY(2px);
+    transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+  }
+  .edge {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    background: linear-gradient(
+      to left,
+      hsl(300, 3%, 6%) 0%,
+      hsl(0, 0%, 0%) 8%,
+      hsl(0, 0%, 3%) 92%,
+      hsl(0, 0%, 5%) 100%
+    );
+  }
+  .front {
+    font-family: "Titan One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+    display: block;
+    position: relative;
+    padding: 16px 30px;
+    border-radius: 12px;
+    font-size: 1.25rem;
+    color: white;
+    background: hsl(0, 0%, 5%);
+    will-change: transform;
+    transform: translateY(-4px);
+    transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+  }
+
+  .shadow2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    background: hsl(0deg 0% 0% / 0.25);
+    will-change: transform;
+    transform: translateY(2px);
+    transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+  }
+  .edge2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    background: linear-gradient(
+      to left,
+      hsl(0, 0%, 34%) 0%,
+      hsl(0, 0%, 30%) 8%,
+      hsl(0, 0%, 37%) 92%,
+      hsl(0, 0%, 29%) 100%
+    );
+  }
+  .front2 {
+    font-family: "Titan One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+    display: block;
+    position: relative;
+    padding: 16px 30px;
+    border-radius: 12px;
+    font-size: 1.25rem;
+    color: white;
+    background: hsl(0, 0%, 50%);
+    will-change: transform;
+    transform: translateY(-4px);
+    transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+  }
+
+   .shadow3 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    background: hsl(0deg 0% 0% / 0.25);
+    will-change: transform;
+    transform: translateY(2px);
+    transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+  }
+  .edge3 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    background: linear-gradient(
+      to left,
+      hsl(0, 46%, 24%) 0%,
+      hsl(0, 60%, 11%) 8%,
+      hsl(0, 61%, 23%) 92%,
+      hsl(0, 49%, 16%) 100%
+    );
+  }
+  .front3 {
+    font-family: "Titan One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+    display: block;
+    position: relative;
+    padding: 16px 30px;
+    border-radius: 12px;
+    font-size: 1.25rem;
+    color: white;
+    background: hsl(0, 84%, 34%);
+    will-change: transform;
+    transform: translateY(-4px);
+    transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+  }
+
+
+
+  .pushable:hover {
+    filter: brightness(110%);
+  }
+  .pushable:hover .front {
+    transform: translateY(-6px);
+    transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+  }
+  .button:active .front {
+    transform: translateY(-2px);
+    transition: transform 34ms;
+  }
+  .button:hover .shadow {
+    transform: translateY(4px);
+    transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+  }
+  .button:active .shadow {
+    transform: translateY(1px);
+    transition: transform 34ms;
+  }
+
+  .pushable:hover .front {
+    transform: translateY(-6px);
+    transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+  }
+  .button2:active .front {
+    transform: translateY(-2px);
+    transition: transform 34ms;
+  }
+  .button2:hover .shadow {
+    transform: translateY(4px);
+    transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+  }
+  .button2:active .shadow {
+    transform: translateY(1px);
+    transition: transform 34ms;
+  }
+
+  .pushable:hover {
+    filter: brightness(110%);
+  }
+  .pushable:hover .front2 {
+    transform: translateY(-6px);
+    transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+  }
+  .button:active .front2 {
+    transform: translateY(-2px);
+    transition: transform 34ms;
+  }
+  .button:hover .shadow2 {
+    transform: translateY(4px);
+    transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+  }
+  .button:active .shadow2 {
+    transform: translateY(1px);
+    transition: transform 34ms;
+  }
+
+  .pushable:hover {
+    filter: brightness(110%);
+  }
+  .pushable:hover .front3 {
+    transform: translateY(-6px);
+    transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+  }
+  .button2:active .front3 {
+    transform: translateY(-2px);
+    transition: transform 34ms;
+  }
+  .button2:hover .shadow3 {
+    transform: translateY(4px);
+    transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+  }
+  .button2:active .shadow3 {
+    transform: translateY(1px);
+    transition: transform 34ms;
+  }
+
+  .button:focus:not(:focus-visible) {
+    outline: none;
+  }
