--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,10 @@
          url('/assets/fonts/Digital7Mono-Yz9J4.ttf')  format('truetype'),
          url('/assets/fonts/Digital7Mono-Yz9J4.svg') format('svg');
 }
+* {
+    -webkit-tap-highlight-color: transparent;
+}
+
 html {
     height: 100%;
 }
@@ -44,7 +48,7 @@ body {
     align-items: center;
     justify-items: center;
     flex-direction: column;
-    flex-shrink:inherit;
+    flex:auto;
     
     
     
@@ -59,7 +63,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding-left: 10px;
-    flex-shrink: inherit;
+    
 
     gap: 4px;
     box-shadow: 4px 8px 6px -2px #1f1f1f;
@@ -119,7 +123,7 @@ body {
     margin-top: 30px;
     gap: 10px;
     
-    justify-content: space-evenly;
+    flex-grow: 1;
     
 
 }
