--- a/assets/style.css
+++ b/assets/style.css
@@ -33,10 +33,14 @@ body {
 }
 
 #header {
+    display: flex;
+    align-items: center;
     font-family: 'Digital-7';
     font-weight: 400;
     font-style: normal;
     font-size: 20px;
+
+    margin-top: 50px;
 }
 
 #main-container {
@@ -45,9 +49,10 @@ body {
     width: 100vw;
     background-color: rgb(53, 53, 53);
     display:flex;
+    flex-direction: column;
     align-items: center;
     justify-items: center;
-    flex-direction: column;
+    
     flex:auto;
     
     
@@ -120,10 +125,9 @@ body {
 #digit-container {
     display: flex;
     flex-direction: column;
-    margin-top: 30px;
-    gap: 10px;
     
-    flex-grow: 1;
+    gap: 10px;
+   margin-top: 20px;
     
 
 }
