--- a/assets/style.css
+++ b/assets/style.css
@@ -1,413 +1,369 @@
-    @font-face {
-    font-family: 'Digital-7';
-    src: url('fonts/Digital7Mono-Yz9J4.eot');
-    src: url('fonts/Digital7Mono-Yz9J4.eot?#iefix') format('embedded-opentype'),
-         url('fonts/Digital7Mono-Yz9J4.woff2') format('woff2'),
-         url('fonts/Digital7Mono-Yz9J4.woff') format('woff'),
-         url('fonts/Digital7Mono-Yz9J4.ttf')  format('truetype'),
-         url('fonts/Digital7Mono-Yz9J4.svg#Digital-7') format('svg');
-}@font-face {
-    font-family: 'Digital-7';
-    src: url('/assets/fonts/Digital7Mono-Yz9J4.eot');
-    src: url('/assets/fonts/Digital7Mono-Yz9J4.eot') format('embedded-opentype'),
-         url('/assets/fonts/Digital7Mono-Yz9J4.woff2') format('woff2'),
-         url('/assets/fonts/Digital7Mono-Yz9J4.woff') format('woff'),
-         url('/assets/fonts/Digital7Mono-Yz9J4.ttf')  format('truetype'),
-         url('/assets/fonts/Digital7Mono-Yz9J4.svg') format('svg');
+@font-face {
+font-family: 'Digital-7';
+src: url('fonts/Digital7Mono-Yz9J4.eot');
+src: url('fonts/Digital7Mono-Yz9J4.eot?#iefix') format('embedded-opentype'),
+url('fonts/Digital7Mono-Yz9J4.woff2') format('woff2'),
+url('fonts/Digital7Mono-Yz9J4.woff') format('woff'),
+url('fonts/Digital7Mono-Yz9J4.ttf') format('truetype'),
+url('fonts/Digital7Mono-Yz9J4.svg#Digital-7') format('svg');
 }
+
 * {
-    -webkit-tap-highlight-color: transparent;
+-webkit-tap-highlight-color: transparent;
 }
 
 html {
-    height: 100%;
+height: 100%;
 }
+
 body {
-    
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0%;
-    padding: 0;
+height: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+margin: 0%;
+padding: 0;
 }
 
 #header {
-    display: flex;
-    align-items: center;
-    font-family: 'Digital-7';
-    font-weight: 400;
-    font-style: normal;
-    font-size: 20px;
-
-    margin-top: 50px;
+display: flex;
+align-items: center;
+font-family: 'Digital-7';
+font-weight: 400;
+font-style: normal;
+font-size: 20px;
+margin-top: 50px;
 }
 
 #main-container {
-
-    height: 100vh;
-    width: 100vw;
-    background-color: rgb(53, 53, 53);
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-items: center;
-    
-    flex:auto;
-    
-    
-    
-    
+height: 100vh;
+width: 100vw;
+background-color: rgb(53, 53, 53);
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-items: center;
 }
 
 #display {
-    width: 300px;
-    height: 120px;
-    background-color: rgb(0, 0, 0);
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 10px;
-    
-
-    gap: 4px;
-    box-shadow: 4px 8px 6px -2px #1f1f1f;
-    
-    
+width: 300px;
+height: 120px;
+background-color: rgb(0, 0, 0);
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding-left: 10px;
+gap: 4px;
+box-shadow: 4px 8px 6px -2px #1f1f1f;
 }
 
 #back-layer-text {
-    color: rgba(16, 28, 28, 0.335);
-    font-family: 'Digital-7';
-    font-weight: 400;
-    font-style: normal;
-    font-size: 60px;
-    margin: 0%;
+color: rgba(16, 28, 28, 0.335);
+font-family: 'Digital-7';
+font-weight: 400;
+font-style: normal;
+font-size: 60px;
+margin: 0%;
 }
 
 #display-text {
-    position: absolute;
-    height: 60px;
-    color: rgb(53, 207, 207);
-    filter: drop-shadow(0 0 0.75rem rgba(53, 207, 207, 0.475));
-                
-    font-family: 'Digital-7';
-    font-weight: 400;
-    font-style: normal;
-    font-size: 60px;
-    margin: 0%;
-    padding: 0%;
-}
-
-#operators {
-    
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-    margin-top: 140px;
-    
-    
-    
-}
-
-#operators-digits {
-    display: flex;
-    gap: 20px;
-    flex: 1;
-    
-    
-
-
-    
-    
+position: absolute;
+height: 60px;
+color: rgb(53, 207, 207);
+filter: drop-shadow(0 0 0.75rem rgba(53, 207, 207, 0.475));
+font-family: 'Digital-7';
+font-weight: 400;
+font-style: normal;
+font-size: 60px;
+margin: 0%;
+padding: 0%;
 }
 
 #digit-container {
-    display: flex;
-    flex-direction: column;
-    
-    gap: 10px;
-   margin-top: 20px;
-    
-
+display: flex;
+flex-direction: column;
+gap: 10px;
+margin-top: 20px;
 }
 
 .button {
-    display: flex;
-    position: relative;
-    border: none;
-    background: transparent;
-    padding: 0;
-    cursor: pointer;
-    outline-offset: 4px;
-    transition: filter 250ms;
-    flex-grow: 1;
-    
+position: relative;
+border: none;
+background: transparent;
+padding: 0;
+cursor: pointer;
+outline-offset: 4px;
+transition: filter 250ms;
+
 }
+
 .button2 {
-    display: flex;
-    position: relative;
-    border: none;
-    background: transparent;
-    padding: 0;
-    cursor: pointer;
-    outline-offset: 4px;
-    transition: filter 250ms;
-    
+position: relative;
+border: none;
+background: transparent;
+padding: 0;
+cursor: pointer;
+outline-offset: 4px;
+transition: filter 250ms;
 }
 
 .digits {
-    display: flex;
-    gap: 10px;
-    justify-content: space-between;
-    
-    
-    
+display: flex;
+gap: 10px;
+justify-content: space-between;
 }
 
-
 #screen-operators {
-
-    color: rgba(16, 28, 28, 0.335);
-    display: flex;
-    flex-direction: column;
-        gap: 12px;
-    
-    margin-bottom: 20px;
-    margin-left: 20px;
-    
-
+color: rgba(16, 28, 28, 0.335);
+display: flex;
+flex-direction: column;
+gap: 12px;
+margin-bottom: 20px;
+margin-left: 20px;
 }
 
 #screen-operators2 {
-
-    color: rgba(16, 28, 28, 0.335);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 12px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    
-
+color: rgba(16, 28, 28, 0.335);
+display: flex;
+flex-direction: column;
+justify-content: center;
+gap: 12px;
+margin-right: 20px;
+margin-bottom: 20px;
 }
+
 .screen-operators-group {
-    text-align: center;
-    font-size: 30px;
-    font-weight: 900;
-    height: 16px;
-    margin-right: 10px;
+text-align: center;
+font-size: 30px;
+font-weight: 900;
+height: 16px;
+margin-right: 10px;
 
 }
 
-  .shadow {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 12px;
-    background: hsl(0deg 0% 0% / 0.25);
-    will-change: transform;
-    transform: translateY(2px);
-    transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
-  }
-  .edge {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 12px;
-    background: linear-gradient(
-      to left,
-      hsl(300, 3%, 6%) 0%,
-      hsl(0, 0%, 0%) 8%,
-      hsl(0, 0%, 3%) 92%,
-      hsl(0, 0%, 5%) 100%
-    );
-  }
-  .front {
-    font-family: "Titan One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-    display: block;
-    position: relative;
-    padding: 16px 30px;
-    border-radius: 12px;
-    font-size: 1.25rem;
-    color: white;
-    background: hsl(0, 0%, 5%);
-    will-change: transform;
-    transform: translateY(-4px);
-    transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
-  }
+.shadow {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+border-radius: 12px;
+background: hsl(0deg 0% 0% / 0.25);
+will-change: transform;
+transform: translateY(2px);
+transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+}
 
-  .shadow2 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 12px;
-    background: hsl(0deg 0% 0% / 0.25);
-    will-change: transform;
-    transform: translateY(2px);
-    transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
-  }
-  .edge2 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 12px;
-    background: linear-gradient(
-      to left,
-      hsl(0, 0%, 34%) 0%,
-      hsl(0, 0%, 30%) 8%,
-      hsl(0, 0%, 37%) 92%,
-      hsl(0, 0%, 29%) 100%
-    );
-  }
-  .front2 {
-    font-family: "Titan One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-    display: block;
-    position: relative;
-    padding: 16px 30px;
-    border-radius: 12px;
-    font-size: 1.25rem;
-    color: white;
-    background: hsl(0, 0%, 50%);
-    will-change: transform;
-    transform: translateY(-4px);
-    transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
-  }
+.edge {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+border-radius: 12px;
+background: linear-gradient(to left,
+hsl(300, 3%, 6%) 0%,
+hsl(0, 0%, 0%) 8%,
+hsl(0, 0%, 3%) 92%,
+hsl(0, 0%, 5%) 100%);
+}
 
-   .shadow3 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 12px;
-    background: hsl(0deg 0% 0% / 0.25);
-    will-change: transform;
-    transform: translateY(2px);
-    transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
-  }
-  .edge3 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 12px;
-    background: linear-gradient(
-      to left,
-      hsl(0, 46%, 24%) 0%,
-      hsl(0, 60%, 11%) 8%,
-      hsl(0, 61%, 23%) 92%,
-      hsl(0, 49%, 16%) 100%
-    );
-  }
-  .front3 {
-    font-family: "Titan One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-    display: block;
-    position: relative;
-    padding: 16px 30px;
-    border-radius: 12px;
-    font-size: 1.25rem;
-    color: white;
-    background: hsl(0, 84%, 34%);
-    will-change: transform;
-    transform: translateY(-4px);
-    transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
-  }
+.front {
+font-family: "Titan One", sans-serif;
+font-weight: 400;
+font-style: normal;
+display: block;
+position: relative;
+padding: 16px 30px;
+border-radius: 12px;
+font-size: 1.25rem;
+color: white;
+background: hsl(0, 0%, 5%);
+will-change: transform;
+transform: translateY(-4px);
+transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+}
+
+.shadow2 {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+border-radius: 12px;
+background: hsl(0deg 0% 0% / 0.25);
+will-change: transform;
+transform: translateY(2px);
+transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+}
+
+.edge2 {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+border-radius: 12px;
+background: linear-gradient(to left,
+hsl(0, 0%, 34%) 0%,
+hsl(0, 0%, 30%) 8%,
+hsl(0, 0%, 37%) 92%,
+hsl(0, 0%, 29%) 100%);
+}
+
+.front2 {
+font-family: "Titan One", sans-serif;
+font-weight: 400;
+font-style: normal;
+display: block;
+position: relative;
+padding: 16px 30px;
+border-radius: 12px;
+font-size: 1.25rem;
+color: white;
+background: hsl(0, 0%, 50%);
+will-change: transform;
+transform: translateY(-4px);
+transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+}
+
+.shadow3 {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+border-radius: 12px;
+background: hsl(0deg 0% 0% / 0.25);
+will-change: transform;
+transform: translateY(2px);
+transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+}
+
+.edge3 {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+border-radius: 12px;
+background: linear-gradient(to left,
+hsl(0, 46%, 24%) 0%,
+hsl(0, 60%, 11%) 8%,
+hsl(0, 61%, 23%) 92%,
+hsl(0, 49%, 16%) 100%);
+}
+
+.front3 {
+font-family: "Titan One", sans-serif;
+font-weight: 400;
+font-style: normal;
+display: block;
+position: relative;
+padding: 16px 30px;
+border-radius: 12px;
+font-size: 1.25rem;
+color: white;
+background: hsl(0, 84%, 34%);
+will-change: transform;
+transform: translateY(-4px);
+transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+}
 
 
 
-  .pushable:hover {
-    filter: brightness(110%);
-  }
-  .pushable:hover .front {
-    transform: translateY(-6px);
-    transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
-  }
-  .button:active .front {
-    transform: translateY(-2px);
-    transition: transform 34ms;
-  }
-  .button:hover .shadow {
-    transform: translateY(4px);
-    transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
-  }
-  .button:active .shadow {
-    transform: translateY(1px);
-    transition: transform 34ms;
-  }
+.pushable:hover {
+filter: brightness(110%);
+}
 
-  .pushable:hover .front {
-    transform: translateY(-6px);
-    transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
-  }
-  .button2:active .front {
-    transform: translateY(-2px);
-    transition: transform 34ms;
-  }
-  .button2:hover .shadow {
-    transform: translateY(4px);
-    transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
-  }
-  .button2:active .shadow {
-    transform: translateY(1px);
-    transition: transform 34ms;
-  }
+.pushable:hover .front {
+transform: translateY(-6px);
+transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+}
 
-  .pushable:hover {
-    filter: brightness(110%);
-  }
-  .pushable:hover .front2 {
-    transform: translateY(-6px);
-    transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
-  }
-  .button:active .front2 {
-    transform: translateY(-2px);
-    transition: transform 34ms;
-  }
-  .button:hover .shadow2 {
-    transform: translateY(4px);
-    transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
-  }
-  .button:active .shadow2 {
-    transform: translateY(1px);
-    transition: transform 34ms;
-  }
+.button:active .front {
+transform: translateY(-2px);
+transition: transform 34ms;
+}
 
-  .pushable:hover {
-    filter: brightness(110%);
-  }
-  .pushable:hover .front3 {
-    transform: translateY(-6px);
-    transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
-  }
-  .button2:active .front3 {
-    transform: translateY(-2px);
-    transition: transform 34ms;
-  }
-  .button2:hover .shadow3 {
-    transform: translateY(4px);
-    transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
-  }
-  .button2:active .shadow3 {
-    transform: translateY(1px);
-    transition: transform 34ms;
-  }
+.button:hover .shadow {
+transform: translateY(4px);
+transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+}
 
-  .button:focus:not(:focus-visible) {
-    outline: none;
-  }
+.button:active .shadow {
+transform: translateY(1px);
+transition: transform 34ms;
+}
+
+.pushable:hover .front {
+transform: translateY(-6px);
+transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+}
+
+.button2:active .front {
+transform: translateY(-2px);
+transition: transform 34ms;
+}
+
+.button2:hover .shadow {
+transform: translateY(4px);
+transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+}
+
+.button2:active .shadow {
+transform: translateY(1px);
+transition: transform 34ms;
+}
+
+.pushable:hover {
+filter: brightness(110%);
+}
+
+.pushable:hover .front2 {
+transform: translateY(-6px);
+transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+}
+
+.button:active .front2 {
+transform: translateY(-2px);
+transition: transform 34ms;
+}
+
+.button:hover .shadow2 {
+transform: translateY(4px);
+transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+}
+
+.button:active .shadow2 {
+transform: translateY(1px);
+transition: transform 34ms;
+}
+
+.pushable:hover {
+filter: brightness(110%);
+}
+
+.pushable:hover .front3 {
+transform: translateY(-6px);
+transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+}
+
+.button2:active .front3 {
+transform: translateY(-2px);
+transition: transform 34ms;
+}
+
+.button2:hover .shadow3 {
+transform: translateY(4px);
+transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+}
+
+.button2:active .shadow3 {
+transform: translateY(1px);
+transition: transform 34ms;
+}
+
+.button:focus:not(:focus-visible) {
+outline: none;
+}
